--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,6 +4,7 @@
 /ChangeCalculator.class
 /EveryThingIsAwesome.class
 /Fanta.class
+/FizzBuzz.class
 /FlamingNinjaStar.class
 /Greeter.class
 /HappyPet.class
@@ -22,4 +23,5 @@
 /TEST.class
 /TortoiseColorChooser.class
 /YearsAlive.class
-/FizzBuzz.class
+/SafeCracker.class
+/ShinyObjects.class
